--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,163 +1,186 @@
-/**
-    * @author Rodrigo Ahumada, Front-end Developer
-    * @description Custom SCSS reset most used HTML elements and global Config.
-    * @params $font-size-global, $font-size, $font-family
-    * @version 1.0.4
-    * @licence free (public domain)
-*/
+*,
+*:after,
+*:before {
+    box-sizing: border-box;
 
-$font-size-global  : 62.5%;
-$font-size         : 1.4rem;
-$font-scale        : 0.2;
-$line-height       : 1.6875;
-//add your own font-family at http://www.cssfontstack.com/
-$font-family       : Arial,"Helvetica Neue",Helvetica,sans-serif;
+    outline: none;
+}
 
-html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, hr, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figure, figcaption, hgroup, menu, footer, header, nav, section, summary, time, mark, audio, video, img, main, input, textarea, select {
-    border: 0;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    font: inherit;
+    font-size: 100%;
+
     margin: 0;
     padding: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+
+    vertical-align: baseline;
+
+    border: 0;
 }
-article, aside, canvas, figure, figure img, figcaption, hgroup, footer, header, nav, section, audio, video, main, img {
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
     display: block;
 }
 
-html {
-   font-size: $font-size-global;
-   -webkit-text-size-adjust: $font-size-global;
-   -ms-text-size-adjust: $font-size-global;
-}
-
 body {
-   font-family: $font-family;
-   font-weight: normal;
-   line-height: $line-height;
-   -webkit-font-smoothing: antialiased;
-   -webkit-touch-callout: none;
-   -webkit-text-size-adjust: none;
-   -webkit-user-select: text;
-}
-//h1 to h6 font-size
-@for $i from 1 through 6 {
-   h#{$i}{
-       font-size:$font-size + $font-scale * (6 - $i)
-   }
+    line-height: 1;
 }
 
-h1, h2, h3, h4, h5, h6 {
-   font-weight: normal;
+ol,
+ul {
+    list-style: none;
 }
 
-p, span, strong, label, a, li, ol, th, td {
-   font-size:$font-size;
-   line-height: $font-size*1.5;
-}
-p{
- strong{
-   font-size: inherit;
-   line-height: inherit;
-   font-weight: 700;
- }
-}
-span, label, strong, li, ol, th, td {
-   color: inherit;
-}
-strong{
+blockquote,
+q {
+    quotes: none;
 
-}
-small {
-   font-size: $font-size*0.8;
-}
-a {
-   text-decoration: none;
-   outline: 0;
- &:hover {
-     text-decoration: underline;
- }
- &:link, &:visited, &:hover, &:active {
-     outline: 0;
- }
- img {
-     border: 0;
- }
-}
-progress[value] {
-   -webkit-appearance: none;
-   appearance: none;
-   width: 100%;
-   height: 35px;
-   border: none;
-   color: inherit;
- &::-webkit-progress-bar {
-   background-color: #eee;
-   border-radius: 2px;
- }
- &::-webkit-progress-value {
-   background-color: #2980b9;
- }
+    &:before,
+    &:after {
+        content: '';
+        content: none;
+    }
 }
 
-li {
-   list-style-type: none;
+sub,
+sup {
+    font-size: 75%;
+    line-height: 0;
+
+    position: relative;
+
+    vertical-align: baseline;
 }
 
-textarea {
-   vertical-align: top;
-   resize: vertical;
-   font-family: inherit;
-   width: 100%;
-   padding: 10px;
+sup {
+    top: -.5em;
 }
 
-input, select {
-   vertical-align: middle;
+sub {
+    bottom: -.25em;
+}
+
+table {
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+
+input,
+textarea,
+button {
+    font-family: inhert;
+    font-size: inherit;
+
+    color: inherit;
 }
 
 select {
-   background: white;
-   -webkit-appearance: menulist-button;
+    text-indent: .01px;
+    text-overflow: '';
+
+    border: 0;
+    border-radius: 0;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
 
-input {
- &[type="search"] {
-   &::-ms-clear, &::-webkit-search-cancel-button {
-     display: none;
-   }
- }
- &[type="file"] {
-     background: none;
- }
- &[type="checkbox"],&[type="radio"]{
-     padding: 0;
-     vertical-align: text-bottom;
- }
- &[type="button"],[type="text"],[type="password"]{
-     border: 0;
-     display: block;
-     width: 100%;
- }
+select::-ms-expand {
+    display: none;
 }
 
-button, input[type="button"], input[type="reset"], input[type="submit"] {
-   cursor: pointer;
-   font-weight: 700;
-   border: 0;
-   vertical-align: middle;
-   -webkit-appearance: button;
- &:disabled{
-       cursor: not-allowed;
-       opacity: .5;
- }
-}
-table {
-   border-collapse: collapse;
-   border-spacing: 0;
-   max-width: 100%;
-   width: 100%;
- td, tr {
-     border: 0;
- }
+code,
+pre {
+    font-family: monospace, monospace;
+    font-size: 1em;
 }
